buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://maven.parchmentmc.org' }
        maven { url = 'https://repo.spongepowered.org/maven' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
        classpath 'org.parchmentmc:librarian:1.+'
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'

version = '1.1'
group = 'suszombification'
archivesBaseName = 'suszombification-1.16.5'

java.toolchain.languageVersion = JavaLanguageVersion.of(8)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

processResources {
    exclude ".cache"
    duplicatesStrategy = 'include'
}

sourceSets.main.resources {
    srcDir 'src/generated/resources' //include generated files
}

minecraft {
    mappings channel: 'parchment', version: '2021.10.17-1.16.5'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run/client')
            property 'forge.logging.console.level', 'debug'
            args '-mixin.config=suszombification.mixins.json'

            mods {
                suszombification {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run/server')
            property 'forge.logging.console.level', 'debug'
            args '-nogui', '-mixin.config=suszombification.mixins.json'

            mods {
                suszombification {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run/data')
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'suszombification', '--all', '--output', file('src/generated/resources/')

            mods {
                suszombification {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven {
    	url "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.2'
    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'

    implementation fg.deobf("curse.maven:trick-or-treat-535636:3514168")
}

mixin {
    add sourceSets.main, "suszombification.refmap.json"
}

jar {
    exclude('suszombification/datagen/**') //exclude files from the built jar that are only used to generate the assets

    manifest {
        attributes([
                "Specification-Title"     : "Suspicious Zombification",
                "Specification-Vendor"    : "Redstone_Dubstep, bl4ckscor3",
                "Specification-Version"   : "${version}",
                "Implementation-Title"    : "Suspicious Zombification",
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "Redstone_Dubstep, bl4ckscor3",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs": "suszombification.mixins.json"
        ])
    }
}
